pkg/check/testdata/ub/types/valid/nullable-default-value.ub
resources: {
  server: ext.server {
    name:    'value'
    profile: 'prod'
  }
}
