pkg/check/testdata/ub/types/invalid/nullable-default-read-required.ub
resources: {
  source: ext.server {
    name: 'source'
  }
  sink: ext.server {
    name: resource.source.profile
  }
}
